syntax = "proto3";

package test.helloworld.model;

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message   = 1;
  int32 name_count = 2;
}
